Added Classes and finalizes

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,10 +35,16 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/3JL_Multi_Banking_System
 endorsed.classpath=
 excludes=
+file.reference.jar_files.zip=src\\jar_files.zip
+file.reference.mysql-connector-java-8.0.28.jar=src\\jar\\mysql-connector-java-8.0.28.jar
+file.reference.protobuf-java-3.11.4.jar=src\\jar\\protobuf-java-3.11.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.28.jar}:\
+    ${file.reference.protobuf-java-3.11.4.jar}:\
+    ${file.reference.jar_files.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
